--- a/app.json
+++ b/app.json
@@ -22,14 +22,14 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.rahulvijay8a.missiono2"
+      "package": "com.rahulvijay12b.missiono2"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "extra": {
       "eas": {
-        "projectId": "0ab07125-2cd7-4658-a67b-0395a7e0a5eb"
+        "projectId": "4ed10c7a-697c-474e-a6a3-9a5ac57e605b"
       }
     }
   }
