--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-image-picker": "^5.6.1",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-maps": "^1.7.1",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-reanimated": "^3.4.2",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.7.1",
