--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
-    "axios": "^1.4.0",
+    "axios": "^1.5.0",
+    "axios-extensions": "^3.1.6",
     "expo": "~49.0.7",
     "expo-blur": "^12.4.1",
+    "expo-file-system": "^15.6.0",
     "expo-font": "^11.4.0",
     "expo-image-picker": "^14.3.2",
     "expo-location": "^16.1.0",
     "expo-status-bar": "~1.6.0",
+    "form-data": "^4.0.0",
     "https": "^1.0.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
