--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "axios-extensions": "^3.1.6",
     "expo": "~49.0.7",
     "expo-blur": "^12.4.1",
+    "expo-camera": "^13.6.0",
     "expo-font": "^11.4.0",
     "expo-image-picker": "^14.3.2",
     "expo-location": "^16.1.0",
-    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.6.0",
     "form-data": "^4.0.0",
     "https": "^1.0.0",
